# ImageProcess

./: CMakeLists.txt
include/: ImageOperationBase.hpp
include/Enhancement/: LinearStretch.hpp  NonLinearStretch.hpp
include/FormatConvert/: CropOperation.hpp  RotationOperation.hpp
include/Smoothing/: GaussianFiltering.hpp  MeanFiltering.hpp  MedianFiltering.hpp
src/: CMakeLists.txt  ImageOperationBase.cpp
src/Enhancement/: LinearStretch.cpp  NonLinearStretch.cpp
src/FormatConvert/: CropOperation.cpp  RotationOperation.cpp
src/Smoothing/: GaussianFiltering.cpp  MeanFiltering.cpp  MedianFiltering.cpp
test/: CMakeLists.txt  main.cpp
